Windows off-screen issue resolved

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@
 ::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.363);
   border-radius: 10px;
+  display: none;
 }
 
 ::-webkit-scrollbar-thumb:hover {
